Add `quiet` option to silence "deny" messages

--- a/pam_duo/pam_duo.8
+++ b/pam_duo/pam_duo.8
@@ -21,6 +21,9 @@ Specify an alternate configuration file to load. Default is
 .It debug
 Debug mode; send log messages to stderr instead of syslog.
 .El
+.It quiet
+Quiet mode; don't print success/failure messages.
+.El
 .Sh CONFIGURATION
 The INI-format configuration file must have a
 .Dq Li duo
